[package]
name = "krusty"
version = "0.1.0"
authors = ["Britton Hayes <brittonhayes@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
error-chain = "0.12.4"
colored = "2"
